--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -606,6 +606,8 @@ body {
   border: none; /* Optional: remove border */
   font-size: 16px; /* Adjust font size as needed */
   cursor: pointer; /* Change cursor to pointer */
+  color:red;
+  font-weight:bold;
 }
 
 .popup img {
